--- a/stylesheet_3.css
+++ b/stylesheet_3.css
@@ -93,7 +93,7 @@ body {
 	height: 400px;
 	width:100%;
 	background-color:#76C9AF;
-	background-image:url("images/contact image.jpg");
+	background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/contact image.jpg");
 	background-size: cover;
 	margin: 1%;
 }
